# landsearch

./: .gitignore  extracted.txt  gen_data.py  mock_land_registry_data.json  pyproject.toml  requirements.txt  requirements.txtx  sample_data.json  sample_data_ghana.json
src/: App.py
src/dev/: cordsarrange.ipynb  dev.ipynb  map.html
src/modules/: compute_coordinates.py  data_storage.py  document_processing.py  logging.py  ocr.py  site_data_processing.py
src/pages/: Land_Document_Processing.py
src/utils/: data_loader.py  edit_data.py  filters.py  map_utils.py  sample_data.py
