[tool.poetry]
name = "landsearch"
version = "0.1.0"
description = ""
authors = ["sethantanah <sethsyd32@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.40.1"
geopandas = "^1.0.1"
folium = "^0.18.0"
streamlit-folium = "^0.23.1"
shapely = "^2.0.6"
ipykernel = "^6.29.5"
rtree = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
